# NeuroTopo

./: .gitignore  README.md  analyze_poles.py  analyze_quads.py  analyze_topology.py  benchmark.py  benchmark_results.json  compare_topology.py  debug_remesh.py  dev_iterate.py  neurotopo_gui.py  neurotopo_log_20260119_153253.txt  pyproject.toml  quick_start.py  save_results.py  status.py  test_blender_render.py  test_dist.py  test_eval.py  test_full_pipeline.py  test_manifold.py  test_mesh.mtl  test_mesh2.fbx  test_neural_pipeline.py  test_nn_86.py  test_pole_classifier.py  test_pole_reducer.py  test_quad_decimate.py  test_semantic_full.py  test_valence.py  test_vision.py  test_visual.py
.github/: copilot-instructions.md
docs/: AI_INTEGRATION.md  README.md  api.md  architecture.md  benchmarks.md  configuration.md  dev_notes.md  topology_guidelines.md
experiments/: baseline.yaml  high_neural.yaml
models/: pole_classifier.pt
scripts/: clean_results.py  migrate_keychain.py  profile_pipeline.py  run_benchmark.py  store_api_key.py  train_pole_classifier.py  validate.py
src/meshretopo/: __init__.py  cli.py  pipeline.py  test_meshes.py
src/meshretopo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/meshretopo/analysis/: __init__.py  blender_render.py  curvature.py  features.py  semantic.py
src/meshretopo/core/: __init__.py  fields.py  io.py  mesh.py
src/meshretopo/evaluation/: __init__.py  (+4 more)
src/neurotopo/: __init__.py  cli.py  pipeline.py  test_meshes.py
tests/: test_config.json  test_harness.py  test_integration.py
(+75 files in other folders)
