[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meshretopo"
version = "0.1.0"
description = "AI-assisted retopology: neural guidance + deterministic mesh generation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "MeshRetopo Team"}
]
keywords = ["mesh", "retopology", "3d", "neural-network", "geometry-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24.0",
    "trimesh>=4.0.0",
    "scipy>=1.11.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
full = [
    "torch>=2.0.0",
    "open3d>=0.17.0",
    "pymeshlab>=2023.12",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
meshretopo = "meshretopo.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
